// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <div
    className="o-shell"
  >
    <SectionElements
      className=" test"
      hasButton={true}
      hasShell={true}
      id="section"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
    </SectionElements>
  </div>
</section>
`;

exports[`Section component Should render the Section component without a button 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <div
    className="o-shell"
  >
    <SectionElements
      className=" test"
      hasButton={false}
      hasShell={true}
      id="section"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
    </SectionElements>
  </div>
</section>
`;

exports[`Section component Should render the Section component without a button and a shell 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <SectionElements
    className=" test"
    hasButton={false}
    hasShell={false}
    id="section"
  >
    <p>
      Test
    </p>
    <p>
      Test
    </p>
  </SectionElements>
</section>
`;

exports[`Section component Should render the Section component without a shell 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <SectionElements
    className=" test"
    hasButton={true}
    hasShell={false}
    id="section"
  >
    <p>
      Test
    </p>
    <p>
      Test
    </p>
  </SectionElements>
</section>
`;
